[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Zach Wegrzyniak <zwegrzyniak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
counter = "0.5.2"
indoc = "1.0"
itertools = "0.9"
lazy_static = "1.4"
maplit = "1.0.2"
regex = "1"
